INTYG-4337: Visa tidigare sjukskrivningsgrad och slutdatum i informationsruta vid förnyelse av lisjp

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -7,6 +7,10 @@
     <span dynamic-label key="{{to.label}}.HLP"></span>
   </div>
 
+  <div id="lastEffectiveDateNoticeText" class="alert alert-info" ng-if="lastEffectiveDateNoticeText">
+    {{lastEffectiveDateNoticeText}}
+  </div>
+
   <div class="formly-field form-inline row">
     <div class="col-md-12">
       <label>
