INTYG-4237: Bättre testbarhet på komponenter och direktiv för s-markering ikon och texter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -34,7 +34,7 @@
                          class="utkast-header-person-id"></div>
 
                     <br>
-                    <span wc-sekretess-avliden printlabel="true"
+                    <span wc-sekretess-avliden uuid="viewState.intygModel.grundData.patient.personId" printlabel="true"
                           avliden="viewState.intygModel.grundData.patient.avliden"
                           sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
 
