--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -81,11 +81,11 @@
             </div>
             <div class="clearfix"></div>
 
-            <!-- Error/info messages -
+            <!-- Error/info messages
             <div wc-secrecy-mark-message
                  person-id="viewState.intygModel.grundData.patient.personId"
                  type="utkast"></div>
-             ->
+             -->
             <div ng-show="viewState.common.error.saveErrorCode != null" class="padding-top-medium">
               <div class="alert alert-danger no-margin">
                 <span ng-bind-html="viewState.common.error.saveErrorMessage"></span>
