--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -1,5 +1,6 @@
 <div>
-    ------------------------------------------------------------------------<br> ---------------> prediction box goes here
+    ------------------------------------------------------------------------<br> ---------------> prediction box goes here:
+    {{riskSignal}}
     <-------------------<br>
         ------------------------------------------------------------------------
 </div>
@@ -15,6 +16,14 @@
 
         <h3>Rekommenderade åtgärder</h3>
 
+        <div ng-repeat="(key,value) in atgarder">
+            <label class="checkbox">
+                <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">
+                {{value}}
+            </label>
+        </div>
+
+        <!--
         <label class="checkbox">
             <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">
             Patienten bör överväga att kontakta företagshälsovård och arbetsgivare för att undersöka möjligheter till ergonomisk rådgivning och arbetsanpassning
@@ -27,6 +36,8 @@
             <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">
             Lorem ipsum dolor sit amet
         </label>
+    -->
+
     </div>
     <div id="statstics" class="tab-pane fade">
         <h3>Statistik</h3>
