--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -15,43 +15,40 @@
       <span id="fmb_diagnos_not_in_fmb_alert">Det FMB-stöd som visas är för koden {{fmb.diagnosKod}} - {{fmb.diagnosBeskrivning}}.</span>
     </div>
     <div class="alert alert-warning" ng-if="!fmb.formData[fieldName]">
-      <span id="fmb_info_not_available"><span class="bold">Observera!</span> För "{{fmb.diagnosKod}} {{fmb.diagnosBeskrivning}}" finns ingen FMB-information för detta fält.</span>
+      <span id="fmb_info_not_available"><span class="bold">Observera!</span> För "{{fmb.diagnosKod}} {{fmb.diagnosBeskrivning}}"
+      finns ingen FMB-information för detta fält.</span>
     </div>
     <div>
       <div class="line">Patienten samtycker till att delta i SRS pilotprojektet</div>
       <div class="line form-group ng-scope">
-            <label class="radio-inline line">
+        <label class="radio-inline line">
               <input type="radio" name="capacityForWorkForecast" id="capacityForWork1" ng-value="true" ng-model="consentGiven" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent(true)"> Ja</label>
       </div>
       <div class="line form-group ng-scope">
-            <label class="radio-inline line">
+        <label class="radio-inline line">
               <input type="radio" name="capacityForWorkForecast" id="capacityForWork1" ng-value="false" ng-model="consentGiven" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent(false)"> Nej</label>
       </div>
     </div>
     <br>
     <hr>
-    <div ng-show="consentGiven">
-      <div ng-show="inQuestionaireState">
-        <wc-srs-questionaire></wc-srs-questionaire>
-      </div>
-      <div ng-show="!inQuestionaireState">
-        <wc-srs-result></wc-srs-result>
-      </div>
-      
+    <h3 style="float: left;">Beräkning av risk för lång sjukskrivning</h3>
+    <div style="float:right;">{{isCollapsed ? "Visa mer" : "Visa mindre"}}
+      <a data-toggle="collapse" ng-click="isCollapsed=!isCollapsed" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <i class="glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-down': isCollapsed, 'glyphicon-menu-up': !isCollapsed}"></i>
+        </a>
     </div>
-   <!-- <div ng-repeat="item in fmb.formData[fieldName]" ng-show="item.text || item.list">
-      <h4 class="fmb-sub-headline" id="fmb_heading_{{item.heading}}">
-        <span message key="{{'fmb.' + item.heading}}"></span>
-      </h4>
-      <section class="fmb-section" id="fmb_text_{{item.heading}}" ng-if="item.text">{{item.text}}</section>
-      <section class="fmb-section" id="fmb_text_{{item.heading}}" ng-if="item.list">
-        <ul class="fmb-bullet-list" ng-repeat="bullet in item.list track by $index">
-          <li id="fmb_bullet_{{item.heading}}_{{$index}}">{{bullet}}</li>
-        </ul>
-      </section>-->
+    <br>
+    <br>
+    <div id="collapseExample" class="panel-collapse collapse in">
+      <div ng-show="consentGiven">
+        <div ng-show="inQuestionaireState">
+          <wc-srs-questionaire></wc-srs-questionaire>
+        </div>
+        <div ng-show="!inQuestionaireState">
+          <wc-srs-result></wc-srs-result>
+        </div>
+      </div>
+
     </div>
   </div>
-  <!--<div class="panel-footer panel-footer--fmb">
-    <img ng-src="/img/socialstyrelsen_icon16.png" /> <span class="fmb-icon-text"
-                                                           id="fmb_static_heading_{{relatedFormId}}">Information från Socialstyrelsens försäkringsmedicinska beslutsstöd</span>
-  </div>-->
+</div>
