INTYG-4422: Ändrat från bottom till top för placering av tooltip

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcSekretessAvliden.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcSekretessAvliden.directive.html
@@ -2,7 +2,7 @@
       popover-trigger="mouseenter" popover-placement="top" popover-popup-delay="300" popover-append-to-body="false">
 </span>
 <span id="wc-sekretessmarkering-icon-{{ uuid }}" ng-if="sekretessmarkering" class="glyphicon glyphicon-ban-circle patient-alert" uib-popover="Patienten har en sekretessmarkering"
-      popover-trigger="mouseenter" popover-placement="bottom" popover-popup-delay="300" popover-append-to-body="false">
+      popover-trigger="mouseenter" popover-placement="top" popover-popup-delay="300" popover-append-to-body="false">
 </span>
 <span ng-if="printlabel" class="patient-alert">
   <span id="wc-sekretessmarkering-avliden-text-{{ uuid }}" ng-if="sekretessmarkering && avliden">OBS! Patienten har avlidit och har en sekretessmarkering.</span>
