--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -4,7 +4,7 @@
       <button id="{{relatedFormId}}-fmb-button" type="button" class="btn btn-default btn-fmb" ng-click="status.open = !status.open">SRS <i
           class="glyphicon fmb-glyphicon"
           ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
-      <div class="panel-wrapper-fmb" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
+      <div class="srs-test panel-wrapper-fmb" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
         <div class="panel-arrow"></div>
         <div class="panel panel-fmb-info">
           <uib-tabset active="srsStates.activeDiagnos" class="fmb-panel-tabset nav-tabs__fmb"
