--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="risk-standard">
+<div class="alert alert-danger">
     {{riskData[riskSignal-1]}}
 </div>
 <ul class="nav nav-tabs">
@@ -38,7 +38,7 @@
     </div>
     <div id="statstics" class="tab-pane fade">
         <h3>Statistik</h3>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Hämta denna från srs-tjänsten sen: {{statistikBild}}</p>
     </div>
 
     <div style="float: right;">
