INTYG-4181: små layout fixar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -8,8 +8,7 @@
 
 <div class="tab-content">
     <div id="atgarder" class="tab-pane fade in active">
-        <p><b>Tänk på att;</b> avråda från arbete ovan axelplanet samt informera om enkla rehabilitetsövningar patieenten kan
-            göra självt.</p>
+        <p><b>Tänk på att;</b> {{atgardObs}}.</p>
 
         <h3>Rekommenderade åtgärder</h3>
 
