INTYG-4414: Långsam och ryckiga animering av utkastheader.
Har även åtgärdat hoppande header vid laddning av utkastet.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevronText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevronText.directive.html
@@ -1,3 +1,3 @@
-<div uib-collapse="isCollapsed">
+<div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()">
   <div class="wc-help-chevron__text multiline"><span ng-bind-html="text"></span></div>
 </div>
