--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -19,7 +19,7 @@
           <form name="certForm" novalidate autocomplete="off" wc-auto-save>
             <div ng-hide="viewState.common.error.activeErrorMessageKey || viewState.common.deleted">
 
-              <div wc-spinner label="info.loadingdata" show-spinner="!viewState.common.doneLoading"
+              <div wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading"
                    show-content="viewState.common.doneLoading">
 
                 <div id="certificate" class="row certificate">
