--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -4,8 +4,8 @@
   </div>
 
   <div ng-hide="viewState.common.error.activeErrorMessageKey">
-    <div wc-spinner label="info.loadingdata" show-spinner="!viewState.common.doneLoading"
-         show-content="viewState.common.doneLoading" is-header="true">
+    <div wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading"
+         show-content="viewState.common.doneLoading">
 
       <div class="header-fix-panel">
         <div class="header-fix-top-expand">
