INTYG-4181: diverse småfixar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -13,26 +13,10 @@
         <h3>Rekommenderade åtgärder</h3>
 
         <div ng-repeat="(key,value) in atgarder">
-           <!-- <label class="checkbox">
-                <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">-->
-                <ul><li>{{value}}</li></ul>
-            <!--</label>-->
+            <ul>
+                <li>{{value}}</li>
+            </ul>
         </div>
-
-        <!--
-        <label class="checkbox">
-            <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">
-            Patienten bör överväga att kontakta företagshälsovård och arbetsgivare för att undersöka möjligheter till ergonomisk rådgivning och arbetsanpassning
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">
-            Förmedling av kontakt med fysioterapeut
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" id="arbeteNuvarande" ng-model="model.nuvarandeArbete" ng-change="onSysselsattningChange(); validate()" class="ng-pristine ng-valid ng-touched" name="" style="">
-            Lorem ipsum dolor sit amet
-        </label>
-    -->
 
     </div>
     <div id="statstics" class="tab-pane fade">
