INTYG-4420: Visar f.d. personnummer när det ändras via djupintegration

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygPatientNamnPersonnummer.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcIntygPatientNamnPersonnummer.directive.html
@@ -1,5 +1,9 @@
-<span>
+<span class="wc-intyg-patient-namn-personnummer">
   <label class="control-label" id="patientNamnPersonnummer">
  {{ patientName }} - {{ personId | PersonIdFormatter }}
   </label>
+
+  <span class="old-person-id" data-ng-if="oldPersonId && oldPersonId != personId">
+    f.d. {{ oldPersonId | PersonIdFormatter }}
+  </span>
 </span>
