--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -69,6 +69,7 @@
                 <div wc-intyg-patient-namn-personnummer
                      patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
                      person-id="viewState.intygModel.grundData.patient.personId"
+                     old-person-id="oldPersonId"
                      class="utkast-header-person-id"></div>
 
                 <br>
