INTYG-4181: fixat beteendet för frågor och svar för radioknapparna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div ng-class="{'srs-column': srsAvailable}">
+  <div ng-class="{'fmb-column': srsAvailable}">
     <div ng-transclude></div>
   </div>
 </div>
