--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -11,7 +11,7 @@
                       ng-class="{'hide-tabs': (srsStates.diagnoses | keyLength) < 2}">
             <uib-tab index="$index + 1" ng-repeat="fmb in srsStates.diagnoses" heading="{{fmb.diagnosKod}}"
                      disable="false" select="selectDiagnos($index)">
-              <wc-srs-content related-form-id="relatedFormId" fmb="fmb" status="status" field-name="fieldName"></wc-srs-content>
+              <wc-srs-content related-form-id="relatedFormId" fmb="fmb" status="status" field-name="fieldName" person-id="personId" hsa-id="hsaId"></wc-srs-content>
             </uib-tab>
           </uib-tabset>
         </div>
