--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcSekretessAvliden.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcSekretessAvliden.directive.html
@@ -1,7 +1,7 @@
 <span id="wc-avliden-icon-{{ uuid }}" ng-if="avliden" class="glyphicon glyphicon-info-sign patient-alert" uib-popover="Patienten är avliden"
       popover-trigger="mouseenter" popover-placement="top" popover-popup-delay="300" popover-append-to-body="false">
 </span>
-<span id="wc-sekretessmarkering-icon-{{ uuid }}" ng-if="sekretessmarkering" class="glyphicon glyphicon-ban-circle patient-alert" uib-popover="Patienten har en sekretessmarkering"
+<span id="wc-sekretessmarkering-icon-{{ uuid }}" ng-if="sekretessmarkering" class="glyphicon glyphicon-certificate patient-alert" uib-popover="Patienten har en sekretessmarkering"
       popover-trigger="mouseenter" popover-placement="top" popover-popup-delay="300" popover-append-to-body="false">
 </span>
 <span ng-if="printlabel" class="patient-alert">
