INTYG-4181: la till direktiv för infobox

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -24,6 +24,7 @@
     </div>
     <br>
     <hr>
+    <wc-srs-info-box message-string="'info box text message'"></wc-srs-info-box>
     <h3 style="float: left;">Beräkning av risk för lång sjukskrivning</h3>
     <div style="float:right;">{{isCollapsed ? "Visa mer" : "Visa mindre"}}
       <a data-toggle="collapse" ng-click="isCollapsed=!isCollapsed" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
