INTYG-4181: nytt försök med att föra in viewState

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
@@ -1,7 +1,7 @@
 <div class="intyg-block__titlerow ng-scope">
         <section>
             <div ng-repeat="question in questions">
-                <div class="row">
+                <div>
                     <br/><span>{{question.text}}</span>
                 </div>
                 <div ng-repeat="answer in question.answerOptions" for="{{answer}}">
