--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -81,6 +81,10 @@
             </div>
             <div class="clearfix"></div>
 
+            <div wc-new-person-id-message patient="viewState.intygModel.grundData.patient"></div>
+
+            <div wc-patient-info-change-message grund-data="viewState.intygModel.grundData"></div>
+
             <!-- Error/info messages -->
 
             <div ng-show="viewState.common.error.saveErrorCode != null" class="padding-top-medium">
