INTYG-4496: Uppdaterat texten enligt krav

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/komplettering-modal-dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/komplettering-modal-dialog.html
@@ -33,14 +33,14 @@
       <div ng-class="{'col-md-12': !model.arendeSvar.showOvrigaUpplysningar, 'col-md-6': model.arendeSvar.showOvrigaUpplysningar}">
         <div class="dialog-choice-box">
           <div class="dialog-choice-box__text-section">
-            <h4>Ingen medicinskt ansvarig finns tillgänglig</h4>
-            <p>Intygsutfärdaren finns inte längre tillgänglig och ingen annan på vårdenheten kan ansvara för innehållet i ursprungsintyget *</p>
+            <h4>Ingen kan ta det medicinska ansvaret för intyget</h4>
+            <p>Om intygsutfärdaren inte längre finns tillgänglig och ingen annan kan ta det medicinska ansvaret för intyget på vårdenheten så kan du delge Försäkringskassan det genom att svara med meddelande.*</p>
             <div class="dialog-choice-box__button-section">
               <button type="button" id="komplettering-modal-dialog-answerWithMessage-button" class="btn btn-default" ng-click="button2click()">
                 Svara med meddelande
               </button>
             </div>
-            <p class="dialog_choice-box__warning-text">*OBS! Ingen medicinsk information får anges.</p>
+            <p class="dialog_choice-box__warning-text">*Obs! Ingen medicinsk information ska anges.</p>
           </div>
         </div>
       </div>
